--- a/style/main.scss
+++ b/style/main.scss
@@ -107,11 +107,11 @@ h1.title {
 }
 
 .score-container:after {
-  content: "Pontos";
+  content: "Score";
 }
 
 .best-container:after {
-  content: "Melhor"
+  content: "Best"
 }
 
 p {
