--- a/style/main.css
+++ b/style/main.css
@@ -90,7 +90,7 @@ h1.title {
     animation-fill-mode: both; }
 
 .score-container:after {
-  content: "Pontuação"; }
+  content: "Pontos"; }
 
 .best-container:after {
   content: "Melhor"; }
